<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/team_layout">

    <TextView
        android:id="@+id/team_name_label"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/midmedium"
        android:layout_marginEnd="@dimen/tiny"
        android:layout_marginStart="@dimen/tiny"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/team"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/team_wins_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/team_wins_label"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/midmedium"
            android:layout_marginEnd="@dimen/midmedium"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/wins"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/team_losses_label"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginRight="@dimen/midmedium"/>

    <TextView
            android:id="@+id/team_losses_label"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/midmedium"
            android:layout_marginEnd="@dimen/tiny"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/losses"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="@dimen/tiny"/>

</androidx.constraintlayout.widget.ConstraintLayout>