<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:textStyle="bold">

    <include android:id="@+id/player_team_titles" layout="@layout/teams_titles"
             android:layout_width="match_parent"
             android:layout_height="@dimen/zero"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="@dimen/xxextrasmall"/>

    <include android:id="@+id/player_team_values" layout="@layout/teams_item"
             android:layout_width="match_parent"
             android:layout_height="@dimen/zero"
             app:layout_constraintTop_toBottomOf="@+id/player_team_titles"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/player_name_title"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/midmedium"
        android:layout_marginEnd="@dimen/tiny"
        android:layout_marginStart="@dimen/tiny"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/full_name"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/player_position_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_team_values"/>

    <TextView
            android:id="@+id/player_position_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/midmedium"
            android:layout_marginEnd="@dimen/midmedium"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/position"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/player_number_title"
            app:layout_constraintTop_toBottomOf="@+id/player_team_values"
            android:layout_marginRight="@dimen/midmedium"/>

    <TextView
            android:id="@+id/player_number_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/midmedium"
            android:layout_marginEnd="@dimen/tiny"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/number"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_team_values"
            android:layout_marginRight="@dimen/tiny"/>

</androidx.constraintlayout.widget.ConstraintLayout>