<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/teamsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_view"
        layout="@layout/toolbar_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/teamProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny"
        app:layout_constraintBottom_toBottomOf="@+id/teamDetailsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_view" />

    <TextView
        android:id="@+id/teamErroMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/error_occured"
        android:textColor="@color/colorBlack"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/teamDetailsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_view" />

    <Button
        android:id="@+id/teamRetryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny"
        android:text="@string/retry"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/teamDetailsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamErroMessage" />

    <ScrollView
        android:id="@+id/teamDetailsLayout"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_view"
        tools:ignore="ScrollViewCount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/teamImage"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/utralarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/teamName"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teamImage" />

            <TextView
                android:id="@+id/teamAbbrevaition"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teamImage" />

            <TextView
                android:id="@+id/teamRegion"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teamName" />

            <TextView
                android:id="@+id/teamPopularity"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teamName" />

            <Button
                android:id="@+id/teamPlayersButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_players"
                android:textSize="@dimen/font20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teamPopularity" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>